# Limpu-bot

./: .gitignore  Dockerfile  README.md  bot.py  pyproject.toml
src/plugins/course_manager/: __init__.py  config.py  data_loader.py  handlers.py  rag_engine.py
src/plugins/pr_entry/: __init__.py  handlers.py  moderation.py  prserver_client.py  settings.py
tools/: sync_final_to_courses.py
